# XT3RN4L_D4T4B45E

./: .gitignore  Html_Viewer.py  RandomValues.py  add_layout.py  data.py  edit_layout.py  layout.py  main.py  parse_data.py  pyproject.toml  random_data.py  requirements.txt  tmp.py
.deploy/: README.md
XT3RN4L_D4T4B453/: Layouts.py  __init__.py  main.py  pyside_layout.py  pyside_main.py  tools.py
XT3RN4L_D4T4B453/utils/: HtmlViewer.py
data/: random_data.json
src/: Layouts.py  add_layout.py  edit_layout.py  layout.py
src/utils/: Html_Viewer.py  RandomValues.py  dict2array.py  random_data.py
